슬라이드 이미지 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- header -->
         <div class="header-wrap">
             <div class="header">
-                <span>
+                <span class="logo-wrap">
                     <svg class="logo" viewBox="0 0 111 30" focusable="false">
                         <g id="netflix-logo">
                             <path d="M105.06233,14.2806261 L110.999156,30 C109.249227,
@@ -54,7 +54,11 @@
                         </g>
                     </svg>
                 </span>
-                <a class="login" href="">로그인</a>
+                <div class="header-right">
+                    <span class="header-text">TV프로그램과 영화</span>
+                    <a class="free" href="">30일 무료 체험</a>
+                    <a class="login" href="">로그인</a>
+                </div>
             </div>
         </div>
         <!-- hero -->
@@ -63,13 +67,20 @@
                 <div class="inner">
                     <div class="hero-background">
                         <div class="hero-img">
-                            <img src="img/program/program6.jpg" alt="">
+                            <img class="slide" src="img/program/program7.jpg" alt="">
+                            <img class="slide"src="img/program/program2.jpg" alt="">
+                            <img class="slide" src="img/program/program8.jpg" alt="">
+                            <img class="slide" src="img/program/program3.jpg" alt="">
+                            <img class="slide" src="img/program/program5.jpg" alt="">
+                            <img class="slide" src="img/program/program6.jpg" alt="">
                             <div class="hero-img-gradient"></div>
                         </div>
                     </div>
                     <div class="hero-text-box">
                         <h1>영화, TV 프로그램을 무제한으로.</h1>
-                        <h2>다양한 디바이스에서 시청하세요. 언제든 해지하실 수 있습니다.</h2>
+                        <h2>다양한 디바이스에서 시청하세요.
+                            <br> 
+                            언제든 해지하실 수 있습니다.</h2>
                         <form method="GET">
                             <h3>시청할 준비가 되셨나요? 멤버십을 등록하거나 재시작하려면 이메일 주소를 입력하세요.</h3>
                             <div class="email-wrap">
@@ -85,6 +96,7 @@
                                 </button>
                             </div>
                         </form>
+                        <h3>신규 회원만 이 프로모션을 이용하실 수 있습니다.</h3>
                     </div>
                 </div>
             </div>
@@ -247,6 +259,75 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="inner">
+                <div class="site-footer">
+                    <p>질문이 있으신가요? 문의 전화:  00-308-321-0058</p>
+                    <ul class="footer-link">
+                        <li>
+                            <a href="">자주 묻는 질문</a>
+                        </li>
+                        <li>
+                            <a href="">고객 센터</a>
+                        </li>
+                        <li>
+                            <a href="">계정</a>
+                        </li>
+                        <li>
+                            <a href="">미디어 센터</a>
+                        </li>
+                        <li>
+                            <a href="">투자 정보(IR)</a>
+                        </li>
+                        <li>
+                            <a href="">입사 정보</a>
+                        </li>
+                        <li>
+                            <a href="">Netflix 지원 디바이스</a>
+                        </li>
+                        <li>
+                            <a href="">이용 약관</a>
+                        </li>
+                        <li>
+                            <a href="">개인정보</a>
+                        </li>
+                        <li>
+                            <a href="">쿠키 설정</a>
+                        </li>
+                        <li>
+                            <a href="">회사 정보</a>
+                        </li>
+                        <li>
+                            <a href="">문의하기</a>
+                        </li>
+                        <li>
+                            <a href="">속도 테스트</a>
+                        </li>
+                        <li>
+                            <a href="">법적 고지</a>
+                        </li>
+                        <li>
+                            <a href="">Netflix 오리지널</a>
+                        </li>
+                    </ul>
+                    <div class="lang">
+                        <select name="" id="">
+                            <option value="kr">한국어</option>
+                            <option value="en">English</option>
+                        </select>
+                    </div>
+                    <p class="footer-country">Netflix 대한민국</p>
+                    <div class="copy-text">
+                        <div class="copy-text-block">넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호: 00-308-321-0058</div>
+                        <div class="copy-text-block">대표: 레지널드 숀 톰프슨</div>
+                        <div class="copy-text-block">이메일 주소: korea@netflix.com</div>
+                        <div class="copy-text-block">주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동 20층 우편번호 03161</div>
+                        <div class="copy-text-block">클라우드 호스팅: Amazon Web Services Inc.</div>
+                        <div class="copy-text-block"><a href="">공정거래위원회 웹사이트 링크</a></div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="js/index.js"></script>
 </body>
