--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             <a href="">입사 정보</a>
                         </li>
                         <li>
-                            <a href="">Netflix 지원 디바이스</a>
+                            <a href=""><span class="netflix-text">Netflix</span> 지원 디바이스</a>
                         </li>
                         <li>
                             <a href="">이용 약관</a>
@@ -307,7 +307,7 @@
                             <a href="">법적 고지</a>
                         </li>
                         <li>
-                            <a href="">Netflix 오리지널</a>
+                            <a href=""><span class="netflix-text">Netflix</span> 오리지널</a>
                         </li>
                     </ul>
                     <div class="lang">
@@ -316,9 +316,9 @@
                             <option value="en">English</option>
                         </select>
                     </div>
-                    <p class="footer-country">Netflix 대한민국</p>
+                    <p class="footer-country"><span class="netflix-text">Netflix</span> 대한민국</p>
                     <div class="copy-text">
-                        <div class="copy-text-block">넷플릭스서비시스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호: 00-308-321-0058</div>
+                        <div class="copy-text-block">넷플릭스서비스코리아 유한회사 통신판매업신고번호: 제2018-서울종로-0426호 전화번호: 00-308-321-0058</div>
                         <div class="copy-text-block">대표: 레지널드 숀 톰프슨</div>
                         <div class="copy-text-block">이메일 주소: korea@netflix.com</div>
                         <div class="copy-text-block">주소: 대한민국 서울특별시 종로구 우정국로 26, 센트로폴리스 A동 20층 우편번호 03161</div>
