--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </li>
                     </ul>
                     <div class="lang">
-                        <select name="" id="">
+                        <select name="language" id="language">
                             <option value="kr">한국어</option>
                             <option value="en">English</option>
                         </select>
